tests/paczka1/fuzzy1/99697216.err
Error in line 9: L7p A27 98,1
Error in line 12: x3ksK A=79 77,2
Error in line 13: L7p A879 58,39
Error in line 19: x3ksK A27 36,5
Error in line 11: L7p S507 53,2
Error in line 33: S507 A879 45,7
Error in line 39: yVTUE S507 ;2,7
